# Ait

./: .gitignore  CHANGELOG.md  DESIGN.md  README.md  USER_GUIDE.md  install.py  pyproject.toml
examples/: walkthrough.md
project-docs/: README.md
scripts/: migrate_prd_to_global.py  verify_prd_global_invariants.py
skill/ait/: README.md  SKILL.md  pyproject.toml
skill/ait/ait/: __init__.py  block_parser.py  chunk_parser.py  cli.py  context_assembler.py  deps.py  format_validator.py  graph_md.py  hash_utils.py  impact.py  impl_manager.py  index_manager.py  init_manager.py  io_utils.py  merge_engine.py  migrations.py  new_model_manager.py  new_model_validator.py  prd_manager.py  root.py  schemas.py  search.py  specgraph.py  state.py  task_manager.py  validator.py  version_manager.py  yaml_io.py
skill/ait/references/: chunk-parser.md  chunk-system.md  index-system.md  merge-engine.md  new-model-format.md  overview.md  version-manager.md
skill/ait/scripts/: verify-all.sh  verify-no-block-leak.sh  verify-regression.sh  verify-subskill-triggers.sh  verify-wrapper-self-locate.sh
skill/ait/sub-skills/ait-discuss/: SKILL.md
skill/ait/sub-skills/ait-impl-discuss/: SKILL.md
skill/ait/sub-skills/ait-init-guide/: SKILL.md
skill/ait/sub-skills/ait-resume/: SKILL.md
skill/ait/sub-skills/ait-state/: SKILL.md
skill/ait/sub-skills/ait-task-execute/: SKILL.md
skill/ait/templates/: change-record-template.yaml  requirement-template.yaml
tests/: test_baseline_summary_cmd.py  test_block_parser.py  test_chunk_parser.py  test_chunk_parser_global.py  test_chunk_parser_no_impl.py  test_chunk_parser_summary.py  test_e2e_cli.py  test_format_validator_id.py  test_format_validator_impl.py  test_format_validator_prd.py  test_global_prd_baseline.py  test_graph_md.py  test_impl_commit_coverage.py  test_impl_create_modify.py  test_impl_inherit.py  test_index_manager.py  test_index_manager_summary.py  test_install_py.py  test_lint_cli.py  test_merge_engine.py  test_merge_workflow.py  test_migrate_prd_to_global.py  test_new_model_commands.py  test_reindex.py  (+29 more)
(+1538 files in other folders)
