[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ait"
version = "0.1.0"
description = "AIT (AI-Assisted Document Versioning) — block-level version control for AI-collaborated PRD/impl docs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AIT contributors" }]
keywords = ["ai", "documentation", "version-control", "skill", "claude-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development :: Version Control",
]
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "click>=8.0",
]

[project.scripts]
ait = "ait.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ait*"]

[tool.setuptools.package-data]
ait = ["templates/*"]
